<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/dialog_longitude_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:text="@string/enter_longitude"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/dialog_longitude_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginEnd="@dimen/margin_regular"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_longitude_title"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/dialog_longitude_input_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/dialog_longitude_input"
        app:layout_constraintStart_toStartOf="@id/dialog_longitude_input"
        app:layout_constraintTop_toBottomOf="@id/dialog_longitude_input"
        tools:text="@string/incorrect_longitude"
        tools:visibility="visible" />

    <Button
        android:id="@+id/dialog_longitude_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_longitude_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_longitude_input" />

    <Button
        android:id="@+id/dialog_longitude_confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_longitude_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_longitude_input" />

</androidx.constraintlayout.widget.ConstraintLayout>