<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/dialog_target_latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/enter_latitude"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_target_latitude_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_target_latitude_input" />

    <AutoCompleteTextView
        android:id="@+id/dialog_target_latitude_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_target_latitude_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/dialog_target_latitude_input_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/dialog_target_latitude_input"
        app:layout_constraintStart_toStartOf="@id/dialog_target_latitude_input"
        app:layout_constraintTop_toBottomOf="@id/dialog_target_latitude_input"
        tools:text="@string/incorrect_latitude"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/dialog_target_longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/enter_longitude"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_target_longitude_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog_target_longitude_input" />

    <AutoCompleteTextView
        android:id="@+id/dialog_target_longitude_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:inputType="numberSigned|numberDecimal"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_target_longitude_label"
        app:layout_constraintTop_toBottomOf="@id/dialog_target_latitude_input_error_message"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <TextView
        android:id="@+id/dialog_target_longitude_input_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/dialog_target_longitude_input"
        app:layout_constraintStart_toStartOf="@id/dialog_target_longitude_input"
        app:layout_constraintTop_toBottomOf="@id/dialog_target_longitude_input"
        tools:text="@string/incorrect_longitude"
        tools:visibility="visible" />

    <Button
        android:id="@+id/dialog_target_cancel_button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_large"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_target_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_target_longitude_input_error_message" />

    <Button
        android:id="@+id/dialog_target_confirm_button"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_target_cancel_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_target_longitude_input_error_message" />

</androidx.constraintlayout.widget.ConstraintLayout>